# jupyter-autotime

./: .flake8  .gitignore  .python-version  LICENSE  README.md  pyproject.toml
autotime/: __init__.py
