[tool.poetry]
name = "jupyter-autotime"
packages = [
    {include = "autotime"}
]
version = "1.0.1"
description = "Display elapsed time on Jupyter."
authors = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ipython = { version = "^6 || ^7" }

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
yapf = "^0.30.0"
flake8 = "^3.8.4"
cohesion = "^1.0.0"
flake8-blind-except = "^0.1.1"
flake8-bugbear = "^20.11.1"
flake8-class-newline = "^1.6.0"
flake8-commas = "^2.0.0"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.2.0"
flake8-comprehensions = "^3.3.0"
flake8-eradicate = "^1.0.0"
pep8-naming = "^0.11.1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
